<resources>
    <string name="app_name">Lab3</string>
    <string name="result_message">You have chosen: </string>
    <string name="question">Please, select the programming language from the list below</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="loading">loading…</string>
    <string name="history_question">Or, click the button below to view the history:</string>
    <string name="open">OPEN</string>
    <string name="history">History:</string>
    <string name="no_items">No items to show</string>
    <string name="to_main">To main page</string>
    <string name="clear">Clear</string>
</resources>
