<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/history"
            android:textStyle="bold"
            android:textSize="24sp" />

        <com.example.lab3.NoScrollListView
            android:id="@+id/history_languages_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">
        </com.example.lab3.NoScrollListView>

        <LinearLayout
            android:id="@+id/clear_button_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <Button
                android:id="@+id/clear_button"
                style="?attr/materialButtonStyle"
                app:backgroundTint="@android:color/holo_red_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/history_languages_list_no_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/no_items" />

        <TextView
            android:id="@+id/history_languages_list_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:text="@string/loading" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/to_main_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_main" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
