<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/result_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_message"
        android:textSize="24sp"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />

    <TextView
        android:id="@+id/result_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/loading"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_marginStart="5dp"
            />

    </LinearLayout>

</LinearLayout>
